alignement issue

--- a/src/app/ynw_consumer/components/waitlist/appointment/confirm-page/confirm-page.component.css
+++ b/src/app/ynw_consumer/components/waitlist/appointment/confirm-page/confirm-page.component.css
@@ -15,6 +15,19 @@
   padding: 20px 10px 50px;
   text-align: center;
 }
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .book-head {
+      font-size: 20px;
+    }
+}
+/* @media only screen and (max-width: 500px) {
+  .book-head {
+    font-size: 20px;
+  }
+} */
 .book-details {
   border-bottom: 1px solid #ddd;
   font-weight: 600;
